syntax = "proto3";

package order.matching;

option go_package = "go/generated/order";

import "google/protobuf/timestamp.proto";

enum Side {
  ORDER_SIDE_UNSPECIFIED = 0;
  BUY = 1;
  SELL = 2;
}

enum Type {
  ORDER_TYPE_UNSPECIFIED = 0;
  MARKET = 1;
  LIMIT = 2;
  STOP_LIMIT = 3;
  STOP_MARKET = 4;
}

enum Status {
   ORDER_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  OPEN = 2;
  PARTIAL_FILLED = 3;
  FILLED = 4;
  CANCELLED = 5;
  REJECTED = 6;
  EXPIRED = 7;
}

message PlaceOrderResponse {
  string id = 1;
  string symbol = 2;
  Status status = 3;
  string reason = 4;
  google.protobuf.Timestamp engine_timeline = 5;
}

message PlaceOrderRequest {
  string id = 1;
  string symbol = 2;
  uint64 price = 3;
  uint32 quantity = 4;
  Side side = 5;
  Type type = 6;
  google.protobuf.Timestamp engine_timeline = 7;
  string user_id = 8;
}

service MatchingEngine {
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
}
